--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
-body{
-	
+video#bgvid {
+  position: fixed; right: 0; bottom: 0;
+  min-width: 100%; min-height: 100%;
+  width: auto; height: auto; z-index: -100;
+  background: url(polina.jpg) no-repeat;
+  background-size: cover;
+}
+
+h1{
+  text-align: center;
+  margin: 0 auto;
+  color: white;
 }
